--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,28 +1,25 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+cmake_minimum_required(VERSION 2.8.3)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
+project(LaserScanDetector)
+
 set(ROS_BUILD_TYPE Release)
 
-rosbuild_init()
+find_package(catkin REQUIRED COMPONENTS genmsg message_generation roscpp)
 
-#set the default path for built executables to the "bin" directory
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-#set the default path for built libraries to the "lib" directory
-#set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+add_message_files(FILES
+				  Object.msg
+				  ObjectDetection.msg
+)
 
-#uncomment if you have defined messages
-rosbuild_genmsg()
-#uncomment if you have defined services
-#rosbuild_gensrv()
+generate_messages()
+
+catkin_package(CATKIN_DEPENDS message_runtime)
+
+include_directories(${catkin_INCLUDE_DIRS})
 
 file(GLOB_RECURSE LaserScanDetector_src "src/*.cpp")
 
-#rosbuild_add_boost_directories()
-#rosbuild_link_boost(${PROJECT_NAME} thread)
-rosbuild_add_executable(LaserScanDetector ${LaserScanDetector_src})
+add_executable(LaserScanDetector ${LaserScanDetector_src})
+target_link_libraries(LaserScanDetector ${catkin_LIBRARIES})
+
+add_dependencies(LaserScanDetector ${PROJECT_NAME}_generate_messages_cpp)
